backend-deployment.yaml
apiVersion: apps/v1
kind: Deployment

metadata:
  name: lumina-backend
  namespace: lumina

spec:
  replicas: 2

  selector:
    matchLabels:
      app: lumina-backend

  template:
    metadata:
      labels:
        app: lumina-backend

    spec:
      containers:
      - name: backend

        image: ramjeet500/lumina-backend:45

        imagePullPolicy: Always

        ports:
        - containerPort: 8000
