frontend-deployment.yaml
apiVersion: apps/v1
kind: Deployment

metadata:
  name: lumina-frontend
  namespace: lumina

spec:
  replicas: 2

  selector:
    matchLabels:
      app: lumina-frontend

  template:
    metadata:
      labels:
        app: lumina-frontend

    spec:
      containers:
      - name: frontend

        image: ramjeet500/lumina-frontend:41

        imagePullPolicy: Always

        ports:
        - containerPort: 3000
