backend-service.yaml
apiVersion: v1
kind: Service

metadata:
  name: lumina-backend
  namespace: lumina

spec:
  selector:
    app: lumina-backend

  ports:
  - port: 8000
    targetPort: 8000

  type: NodePort
