frontend-service.yaml
apiVersion: v1
kind: Service

metadata:
  name: lumina-frontend
  namespace: lumina

spec:
  selector:
    app: lumina-frontend

  ports:
  - port: 3000
    targetPort: 3000
    nodePort: 30081

  type: NodePort
